k8s/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cluster-api-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
